# mtlpp

./: CMakeLists.txt  mtlpp.hpp  mtlpp.mm
src/: blit_command_encoder.mm  buffer.mm  clear_color.hpp  command_buffer.mm  command_queue.hpp  command_queue.mm  compute_command_encoder.mm  compute_pipeline.mm  defines.hpp  device.hpp  device.mm  drawable.mm  fence.mm  heap.mm  layer.hpp  library.hpp  library.mm  metal_drawable.hpp  metal_drawable.mm  metal_layer.hpp  metal_layer.mm  mtlpp.hpp  ns.mm  render_command_encoder.hpp  render_command_encoder.mm  render_pass.mm  window.hpp  window.mm
xcode/: .gitignore  generate.sh
